1/17/2022
Added DatabaseConfig

Changed Config from class to record

Updated ConfigHandler to add a empty check for the JSON

Removed unneeded variables